crates/aptos-enum-conversion-derive/tests/cases/no_fields.rs
// Copyright (c) Aptos Foundation
// SPDX-License-Identifier: Innovation-Enabling Source Code License

use aptos_enum_conversion_derive::EnumConversion;

#[derive(EnumConversion)]
enum Messages {
    Test
}

fn main() {

}
